@@ -1,3 +1,9 @@
+2001-07-19  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* ldlang.c (lang_leave_overlay): If a region is specified assign
+	it to all sections inside the overlay unless they have been
+	assigned to the own, non-default, memory region.
+
 2001-07-14  matthew green  <mrg@eterna.com.au>
 
 	* configure.tgt (i386-*-netbsdelf*): New target.
